2007-01-04  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box): Fix a compiler warning
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss): Sharpen gloss colours

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_menuitem), (clearlooks_register_style_glossy):
	* engines/clearlooks/src/clearlooks_types.h:

	Add draw_menubaritem function


2007-01-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/lua/Makefile.am:
	- Fix problem found during "make distcheck". There is no
	  config.h/config.h.in.

2007-01-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_merge):
	- Fix merging. Thanks to Werner Pantke for reporting this issue.

2007-01-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_radiobutton):
	Patch from TFKyle:
	- A few M_PI slipped back in.
	- Fix for a C99ism.

2006-12-26  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box), (clearlooks_style_draw_slider):
	- Move slider darwing to clearlooks_style_draw_slider.
	- Use support macros to guard clearlooks_style_draw_box.

2006-12-26  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/lua/src/draw_lib.c: (rectangle), (arc), (luaopen_draw):
	- Add arc function.
	* engines/lua/src/lua_style.c: (lua_style_draw_box),
	(lua_style_draw_option), (lua_style_draw_vline),
	(lua_style_draw_hline):
	- Add separator and radiobutton support.

2006-12-25  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* engines/lua/src/lua_style.c: (lua_style_push_widget_params),